--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 exceptiongroup==1.0.4
 Flask==2.2.2
+Flask-WTF==1.1.1
 idna==3.4
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
@@ -15,12 +16,14 @@ MarkupSafe==2.1.1
 mypy-extensions==0.4.3
 pathspec==0.10.2
 platformdirs==2.5.4
+python-dotenv==0.21.1
 requests==2.28.1
 requests-cache==0.9.7
 six==1.16.0
 tomli==2.0.1
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 url-normalize==1.4.3
 urllib3==1.26.12
 Werkzeug==2.2.2
+WTForms==3.0.1
 zipp==3.10.0
